--- a/html/index.html
+++ b/html/index.html
@@ -1,53 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Registration form</title>
-</head>
-<body>
-    <form action="#" method="post">
-       <h2>Registration Form</h2>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <title>Registration form</title>
+    </head>
+    <body>
+        <form action="#" method="post">
+            <h2>Registration Form</h2>
 
-       <label for="name">Name:</label>
-       <input type="text" id="name" placeholder="enter name"> <br> <br>
-       <label for="email">Email:</label>
-       <input type="email" id="email" placeholder="enter email"> <br> <br>
-       <label for="number">Phone Number:</label>
-       <input type="tel" id="number" placeholder="enter phone number"> <br> <br>
-       <label for="user_name">Username:</label>
-       <input type="text" id="user_name" placeholder="enter username"> <br> <br>
-       <label for="password">Password:</label>
-       <input type="password" id="password" placeholder="enter password"> <br> <br>
-       <label for="gender">Gender:</label><br>
-       <input type="radio" id="male" name="gender">
-       <label for="male">Male</label> <br>
-       <input type="radio" id="female" name="gender">
-       <label for="female">Female</label> <br>
-       <input type="radio" id="transgender" name="gender">
-       <label for="transgender">Transgender</label> <br> <br>
-       <label for="country">Select Country:</label>
-       <select name="country" id="country">
-        <option value="algeria">Algeria</option>
-        <option value="bukinafaso">bukinafaso</option>
-        <option value="burundi">Burundi</option>
-        <option value="cameroon">Cameroon</option>
-        <option value="egypt">Egypt</option>
-        <option value="kenya">Kenya</option>
-        <option value="liberia">Liberia</option>
-        <option value="morocco">Morocco</option>
-        <option value="nigeria">Nigeria</option>
-        <option value="others">Others</option>
-       </select> <br> <br>
-       <input type="checkbox" name="terms" id="terms">
-       <label for="terms">Agree to Terms and Conditions</label>
-       <br> <br> <br>
-       <button type="submit">Submit</button>
-      
-
-    </form>
-    
-</body>
+            <label for="name">Name:</label>
+            <input type="text" id="name" placeholder="enter name" /> <br />
+            <br />
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="enter email" /> <br />
+            <br />
+            <label for="number">Phone Number:</label>
+            <input type="tel" id="number" placeholder="enter phone number" />
+            <br />
+            <br />
+            <label for="username">Username:</label>
+            <input type="text" id="username" placeholder="enter username" />
+            <br />
+            <br />
+            <label for="password">Password:</label>
+            <input type="password" id="password" placeholder="enter password" />
+            <br />
+            <br />
+            <p>Gender:</p> <br/>
+            <input type="radio" id="male" name="gender"/>
+            <label for="male">Male</label> <br/>
+            <input type="radio" id="female" name="gender"/>
+            <label for="female">Female</label> <br/>
+            <input type="radio" id="transgender" name="gender"/>
+            <label for="transgender">Transgender</label> <br/>
+            <br/>
+            <label for="country">Select Country:</label>
+            <select name="country" id="country">
+                <option value="algeria">Algeria</option>
+                <option value="bukinafaso">bukinafaso</option>
+                <option value="burundi">Burundi</option>
+                <option value="cameroon">Cameroon</option>
+                <option value="egypt">Egypt</option>
+                <option value="kenya">Kenya</option>
+                <option value="liberia">Liberia</option>
+                <option value="morocco">Morocco</option>
+                <option value="nigeria">Nigeria</option>
+                <option value="others">Others</option>
+            </select>
+            <br />
+            <br />
+            <input type="checkbox" name="terms" id="terms" />
+            <label for="terms">Agree to Terms and Conditions</label>
+            <br />
+            <br />
+            <br />
+            <button type="submit">Submit</button>
+        </form>
+    </body>
 </html>
